removed health endpoint
